--- a/src/main/resources/com/espol/group04/grupo_04/primary.fxml
+++ b/src/main/resources/com/espol/group04/grupo_04/primary.fxml
@@ -1,16 +1,82 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.espol.group04.grupo_04.PrimaryController">
-   <children>
-      <Label text="Primary View" />
-      <Button fx:id="primaryButton" text="Switch to Secondary View" onAction="#switchToSecondary"/>
-   </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-</VBox>
+<BorderPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.espol.group04.grupo_04.PrimaryController">
+
+    <top>
+        <Label text="Contact Manager - Grupo 04"
+               style="-fx-font-size: 18px; -fx-padding: 10px; -fx-font-weight: bold;"
+               BorderPane.alignment="CENTER"/>
+    </top>
+
+    <center>
+        <VBox spacing="10" alignment="CENTER" padding="20">
+            <HBox spacing="10">
+                <Label text="Name:"/>
+                <TextField fx:id="nameField" prefWidth="200"/>
+            </HBox>
+
+            <HBox spacing="10">
+                <Label text="Address:"/>
+                <TextField fx:id="addressField" prefWidth="200"/>
+            </HBox>
+
+            <HBox spacing="10">
+                <Label text="Phone:"/>
+                <TextField fx:id="phoneField" prefWidth="140"/>
+                <Button text="+" onAction="#handleAddPhone"/>
+            </HBox>
+            <ListView fx:id="phoneList" prefHeight="80"/>
+
+            <HBox spacing="10">
+                <Label text="Email:"/>
+                <TextField fx:id="emailField" prefWidth="140"/>
+                <Button text="+" onAction="#handleAddEmail"/>
+            </HBox>
+            <ListView fx:id="emailList" prefHeight="80"/>
+
+            <HBox spacing="10">
+                <Label text="Social Media:"/>
+                <TextField fx:id="socialField" promptText="e.g. Instagram: @user" prefWidth="140"/>
+                <Button text="+" onAction="#handleAddSocial"/>
+            </HBox>
+            <ListView fx:id="socialList" prefHeight="80"/>
+
+            <HBox spacing="10">
+                <Label text="Important Date:"/>
+                <TextField fx:id="dateField" promptText="e.g. Birthday: 2000-01-01" prefWidth="140"/>
+                <Button text="+" onAction="#handleAddDate"/>
+            </HBox>
+            <ListView fx:id="dateList" prefHeight="80"/>
+
+            <HBox spacing="10">
+                <Label text="Photo Description:"/>
+                <TextField fx:id="photoField" prefWidth="140"/>
+                <Button text="+" onAction="#handleAddPhoto"/>
+            </HBox>
+            <ListView fx:id="photoList" prefHeight="80"/>
+
+            <HBox spacing="10">
+                <Button text="Add Contact" onAction="#handleAddContact"/>
+                <Button text="Delete Contact" onAction="#handleDeleteContact"/>
+            </HBox>
+
+            <HBox spacing="10">
+                <Button text="← Previous" onAction="#handlePrevious"/>
+                <Button text="Next →" onAction="#handleNext"/>
+            </HBox>
+
+            <HBox spacing="10">
+                <Button text="Details" onAction="#handleShowDetails"/>
+            </HBox>
+
+            <Label text="Current Contact:" style="-fx-font-weight: bold;"/>
+            <TextArea fx:id="contactDisplay" editable="false" prefRowCount="6" wrapText="true"/>
+        </VBox>
+    </center>
+</BorderPane>
+
