--- a/src/main/resources/com/espol/group04/grupo_04/secondary.fxml
+++ b/src/main/resources/com/espol/group04/grupo_04/secondary.fxml
@@ -1,16 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.geometry.Insets?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.espol.group04.grupo_04.SecondaryController">
-    <children>
-        <Label text="Secondary View" />
-        <Button fx:id="secondaryButton" text="Switch to Primary View" onAction="#switchToPrimary" />
-    </children>
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<VBox xmlns:fx="http://javafx.com/fxml" fx:controller="com.espol.group04.grupo_04.SecondaryController"
+      spacing="10" alignment="TOP_CENTER" padding="20">
+
+    <Label fx:id="nameLabel" style="-fx-font-size: 18px; -fx-font-weight: bold;" />
+    <Label fx:id="addressLabel" style="-fx-font-size: 14px;" />
+
+    <TitledPane text="Phone Numbers" expanded="true">
+    <content>
+        <ListView fx:id="phoneList" prefHeight="100"/>
+    </content>
+    </TitledPane>
+
+    <TitledPane text="Emails" expanded="true">
+        <content>
+            <ListView fx:id="emailList" prefHeight="100"/>
+        </content>
+    </TitledPane>
+
+    <TitledPane text="Related Contacts" expanded="true">
+        <content>
+            <ListView fx:id="relatedList" prefHeight="100"/>
+        </content>
+    </TitledPane>
+
 </VBox>
+
